# pyproject.toml (兼容 uv 和 Poetry 的混合格式)

[project]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
  "langchain==0.3.0",
  "langchain-openai==0.2.11",
  "langgraph==0.2.56",
  "pandas>=2.1.0,<3.0.0",
  "numpy>=1.24.0,<2.0.0",
  "python-dotenv==1.0.0",
  "matplotlib>=3.9.2,<4.0.0",
  "yfinance>=0.2.51,<0.3.0",
  "akshare>=1.11.22,<2.0.0",
  "requests>=2.31.0,<3.0.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "openai>=1.12.0,<2.0.0",
  "langchain-core>=0.3.29,<0.4.0",
  "google-genai>=0.6.0,<0.7.0",
  "backoff>=2.2.1,<3.0.0",
  "finnhub-python>=2.4.22,<3.0.0",
  "pandas-market-calendars>=4.6.0,<5.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0,<8.0.0",
  "black>=23.7.0,<24.0.0",
  "isort>=5.12.0,<6.0.0",
  "flake8>=6.1.0,<7.0.0"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# 保留 Poetry 配置（可选）
[tool.poetry]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
# 这里可以保持原样，但 uv 会优先使用 [project] 表的定义
